traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:3: error: not found: value positonFinale
  while(!positonFinale()) {
         ^TraversalDiagonal:4: error: not found: value getMondeLargeu
    while (diag<getMondeLargeu) {
                ^TraversalDiagonal:8: error: not found: value get
      while(get(X)!=diag) {
            ^TraversalDiagonal:8: error: not found: value X
      while(get(X)!=diag) {
                ^