traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var cpt:Int = 0
  while(!positonFinale()) {
    while (diag<getMondeLargeu) {
      setPos(0, diag)
      ecritMessage(cpt)
      cpt+=1
      while(get(X)!=diag) {
        setPos(getX()+1, getY()-1)
      }
    }
	}
}

def positionFinale():Boolean = {
  if (getX()==(getMondeHauteur()-1) && getY()==(getMondeLargeur()-1)) return true
  return false
}